# llm-service

./: .gitignore  README.md  Taskfile.yml  bootstrap.sh  main.py  pyproject.toml
llama/: Taskfile.yml  completions.py
resources/: completions.py
